state results: fix winner checkmark jumpint to next line #111

--- a/less/results-table.less
+++ b/less/results-table.less
@@ -74,7 +74,14 @@ table.results-table {
         &.no td  { background-color: @gop; }
         &.yes td { background-color: @ind; }
 
-        .icon { color: #fff; }
+        .icon {
+            color: #fff;
+
+            &:before {
+                display: inline;
+                padding-left: 3px;
+            }
+        }
     }
 
     span.pickup {
